--- a/Cupcake/src/main/resources/templates/404.html
+++ b/Cupcake/src/main/resources/templates/404.html
@@ -14,11 +14,12 @@
 
     <!-- Icon -->
     <link rel="icon" href="images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
-    <link rel="apple-touch-icon" href="static/images/icons/cupcake-1.png">
+    <link rel="apple-touch-icon" href="images/icons/cupcake-1.png">
 
     <!-- CSS Load -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Scripts can also be loaded here with defer -->
     <!-- Framwork load -->
     <link rel="stylesheet" href="css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="css/guacamoleboy-framework.css">
@@ -28,21 +29,22 @@
     <script type="module" src="js/components/navbar.js" defer></script>
 
 </head>
-<body class="subpage visuals-tak">
+<body class="visuals-404">
 
 <!-- Navbar -->
 <div id="navbar-component"></div>
 <!-- Navbar -->
 
-<!-- Tak Start -->
-<section class="section-tak">
-    <h1 class="section-tak-title">Tak for din besked</h1>
-    <h2 class="section-tak-text">Vi svarer så hurtigt vi kan...</h2>
-    <p class="section-tak-p">
-        Indtil da kan du besøge vores mange andre sider. Benyt navbaren herover!
+<!-- 404 Start -->
+<section class="section-404">
+    <h1 class="section-404-title">404</h1>
+    <h2 class="section-404-text">Ups! Siden findes ikke.</h2>
+    <p class="section-404-p">
+        Det ser ud til, at du er faret vild i vores cupcake-univers.<br>
+        Men frygt ej &ndash; vi har stadig masser af søde overraskelser til dig!
     </p>
 </section>
-<!-- Tak End -->
+<!-- 404 End -->
 
 </body>
 </html>
