--- a/Cupcake/src/main/resources/templates/400.html
+++ b/Cupcake/src/main/resources/templates/400.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Gruppe D"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Olsker Cupcakes - 404 </title>
+    <title>Olsker Cupcakes - 400</title>
 
     <!-- Icon -->
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
@@ -37,8 +37,8 @@
 
 <!-- 404 Start -->
 <section class="section-404">
-    <h1 class="section-404-title">404</h1>
-    <h2 class="section-404-text">Ups! Siden findes ikke.</h2>
+    <h1 class="section-404-title">400</h1>
+    <h2 class="section-404-text">Text</h2>
     <p class="section-404-p">
         Det ser ud til, at du er faret vild i vores cupcake-univers.<br>
         Men frygt ej &ndash; vi har stadig masser af søde overraskelser til dig!
