--- a/Cupcake/src/main/resources/templates/register.html
+++ b/Cupcake/src/main/resources/templates/register.html
@@ -41,6 +41,7 @@
             <form id="registerForm" method="post" action ="/register">
                 <input type="text" name ="username" placeholder="Brugernavn" required>
                 <input type="password" name ="password" placeholder="Adgangskode" required>
+                <input type="password" name ="passwordConfirm" placeholder="Adgangskode igen" required>
                 <input type="email" name ="email" placeholder="Email" required>
                 <div class="login-btn-group">
                     <button type="button" class="guac-btn guac-btn-form" onclick="window.location.href='/login'">
