--- a/Cupcake/src/main/resources/templates/events.html
+++ b/Cupcake/src/main/resources/templates/events.html
@@ -87,7 +87,7 @@
 
                         <div class="guac-card event-card">
                             <div class="event-image-container">
-                                <img src="/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
+                                <img src="/images/page-content/events/aa.png" alt="Autumn Cupcake Fair">
                                 <div class="event-badge">20/10-2025</div>
                             </div>
                             <div class="guac-card-title">Chocolate Dipping</div>
@@ -99,8 +99,32 @@
 
                         <div class="guac-card event-card">
                             <div class="event-image-container">
-                                <img src="/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
+                                <img src="/images/page-content/events/fff.png" alt="Autumn Cupcake Fair">
                                 <div class="event-badge">31/10-2025</div>
+                            </div>
+                            <div class="guac-card-title">#BLM Meeting</div>
+                            <div class="guac-card-text">
+                                let's get it! yesssirrrrski. Whatever. This is a text.
+                            </div>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Learn More</a>
+                        </div>
+
+                        <div class="guac-card event-card">
+                            <div class="event-image-container">
+                                <img src="/images/page-content/events/fffff.png" alt="Autumn Cupcake Fair">
+                                <div class="event-badge">04/11-2025</div>
+                            </div>
+                            <div class="guac-card-title">#BLM Meeting</div>
+                            <div class="guac-card-text">
+                                let's get it! yesssirrrrski. Whatever. This is a text.
+                            </div>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Learn More</a>
+                        </div>
+
+                        <div class="guac-card event-card">
+                            <div class="event-image-container">
+                                <img src="/images/page-content/events/aaa.png" alt="Autumn Cupcake Fair">
+                                <div class="event-badge">11/11-2025</div>
                             </div>
                             <div class="guac-card-title">#BLM Meeting</div>
                             <div class="guac-card-text">
