--- a/Cupcake/src/main/resources/templates/final-confirmation.html
+++ b/Cupcake/src/main/resources/templates/final-confirmation.html
@@ -46,18 +46,31 @@
         <!-- Delivery -->
         <h3>Leveringsmetode</h3>
         <div class="delivery-options guac-row">
-            <button type="button">GLS</button>
+            <button type="button">Afhent i butik</button>
         </div>
-        <p>Landevej 47, Køge 4701</p>
-        <p>1-3 hverdage</p>
+        <p>Olskervej 1, 3770 Allinge</p>
+        <p>Din ordre er klar inden for ca 30 min efter godkendelse</p>
+        <p>+45 12 34 56 78</p>
         <!-- Delivery -->
 
         <hr class="section-divider">
 
         <!-- Coupon -->
         <h3>Rabatkode</h3>
-        <p>6006-1010-555C-UPCA-KE90</p>
+        <p>5005-1050-51CU-PCAKE</p>
         <!-- Coupon -->
+
+        <hr class="section-divider">
+
+        <!-- Info Above Order List -->
+        <div class="order-list">
+            <div class="order-item guac-row guac-col-auto">
+                <p>Produkt</p>
+                <p>Antal</p>
+                <p>Pris pr stk</p>
+            </div>
+        </div>
+        <!-- Info Above Order List -->
 
         <hr class="section-divider">
 
@@ -65,32 +78,43 @@
         <div class="order-list">
             <div class="order-item guac-row guac-col-auto">
                 <p>Jordbær Top / Chokolade Bund</p>
-                <p>Antal: 2</p>
-                <p>49kr pr stk</p>
+                <p>2</p>
+                <p>49 kr</p>
             </div>
             <div class="order-item guac-row guac-col-auto">
                 <p>Blåbær Cupcake</p>
-                <p>Antal: 1</p>
-                <p>15kr pr stk</p>
+                <p>1</p>
+                <p>15 kr</p>
             </div>
             <div class="order-item guac-row guac-col-auto">
                 <p>Halloween Cupcake</p>
-                <p>Antal: 7</p>
-                <p>24kr pr stk</p>
+                <p>7</p>
+                <p>24 kr</p>
             </div>
             <div class="order-item guac-row guac-col-auto">
                 <p>Jordbær Cupcake</p>
-                <p>Antal: 9</p>
-                <p>30kr pr stk</p>
+                <p>9</p>
+                <p>30 kr</p>
             </div>
-            <hr class="section-divider">
             <div class="order-item guac-row guac-col-auto">
-                <p>Total</p>
-                <p></p>
-                <p>6900 kr</p>
+                <p>5005-1050-51CU-PCAKE</p>
+                <p>1</p>
+                <p>- 50 kr</p>
             </div>
         </div>
         <!-- Order List -->
+
+        <hr class="section-divider">
+
+        <!-- Info Under Order List -->
+        <div class="order-list">
+            <div class="order-item guac-row guac-col-auto">
+                <p>Total</p>
+                <p></p>
+                <p>510 kr</p>
+            </div>
+        </div>
+        <!-- Info Under Order List -->
 
         <hr class="section-divider">
 
