--- a/Cupcake/src/main/resources/templates/jobs.html
+++ b/Cupcake/src/main/resources/templates/jobs.html
@@ -40,12 +40,12 @@
 
         <div class="guac-container">
             <div class="guac-row">
-                
+
                 <div class="guac-col-auto subpage-cupcake-1">
-                    <img src="/images/page-content/index/cupcake-3.png" alt="Billede 1">
+                    <img src="/images/products/cupcake-16.png" alt="Cupcake dekor 1">
                 </div>
                 <div class="guac-col-auto subpage-cupcake-2">
-                    <img src="/images/page-content/index/cupcake-3.png" alt="Billede 2">
+                    <img src="/images/products/cupcake-2-test-2.png" alt="Cupcake dekor 2">
                 </div>
 
             </div>
