--- a/Cupcake/src/main/resources/templates/tak-order.html
+++ b/Cupcake/src/main/resources/templates/tak-order.html
@@ -39,7 +39,7 @@
     <h1 class="section-tak-title">Tak for din ordre!</h1>
     <h2 class="section-tak-text">Vi har modtaget din bestilling..</h2>
     <p class="section-tak-p">
-        Dit ordrenummer er <span class=".b" th:text="'#' + ${order.id}"></span>
+        Dit ordrenummer er <span class=".b" th:text="'#694206969' + ${order.id}"></span>
     </p>
     <p class="section-tak-p">
         Du vil modtage en bekræftelse på din mail hurtigst muligt. <br>
