--- a/Cupcake/src/main/resources/templates/contact.html
+++ b/Cupcake/src/main/resources/templates/contact.html
@@ -44,10 +44,10 @@
         <div class="guac-container">
             <div class="guac-row">
                 <div class="guac-col-auto subpage-cupcake-1">
-                    <img src="/images/page-content/index/cupcake-3.png" alt="Cupcake dekor 1">
+                    <img src="/images/products/cupcake-16.png" alt="Cupcake dekor 1">
                 </div>
                 <div class="guac-col-auto subpage-cupcake-2">
-                    <img src="/images/page-content/index/cupcake-3.png" alt="Cupcake dekor 2">
+                    <img src="/images/products/cupcake-2-test-2.png" alt="Cupcake dekor 2">
                 </div>
             </div>
         </div>
@@ -79,10 +79,10 @@
                         </p>
                     </div>
                     <ul class="contact-list contact-list-centered">
-                        <li><strong>Adresse:</strong> Olskervej 1, 3770 Allinge</li>
-                        <li><strong>Telefon:</strong> +45 12 34 56 78</li>
-                        <li><strong>E-mail:</strong> kontakt@olskercupcakes.dk</li>
-                        <li><strong>Åbningstider:</strong> Man&ndash;Fre 10&ndash;17, Lør 10&ndash;14</li>
+                        <li>Olskervej 1, 3770 Allinge</li>
+                        <li>+45 12 34 56 78</li>
+                        <li>kontakt@olskercupcakes.dk</li>
+                        <li>Man&ndash;Fre 10&ndash;17 & Lør 10&ndash;14</li>
                     </ul>
                 </div>
 
