--- a/Cupcake/src/main/resources/templates/payment.html
+++ b/Cupcake/src/main/resources/templates/payment.html
@@ -19,11 +19,13 @@
     <!-- CSS Load -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!-- Scripts can also be loaded here with defer -->
     <!-- Framwork load -->
     <link rel="stylesheet" href="/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="/css/guacamoleboy-framework.css">
     <script src="/js/guacamoleboy-wow.js" defer></script>
+
+    <!-- Script Load -->
+    <script src="/js/payment.js" defer></script>
 
 </head>
 <body class="subpage">
@@ -43,30 +45,54 @@
 
             <hr class="section-divider">
 
+            <!-- Info Above Order List -->
+            <div class="order-list">
+                <div class="order-item guac-row guac-col-auto">
+                    <p>Produkt</p>
+                    <p>Antal</p>
+                    <p>Pris pr stk</p>
+                </div>
+            </div>
+            <!-- Info Above Order List -->
+
+            <hr class="section-divider">
+
             <!-- Order List -->
             <div class="order-list">
                 <div class="order-item guac-row guac-col-auto">
                     <p>Jordbær Top / Chokolade Bund</p>
-                    <p>Antal: 2</p>
-                    <p>49kr pr stk</p>
+                    <p>2</p>
+                    <p>49 kr</p>
                 </div>
                 <div class="order-item guac-row guac-col-auto">
                     <p>Blåbær Cupcake</p>
-                    <p>Antal: 1</p>
-                    <p>15kr pr stk</p>
+                    <p>1</p>
+                    <p>15 kr</p>
                 </div>
                 <div class="order-item guac-row guac-col-auto">
                     <p>Halloween Cupcake</p>
-                    <p>Antal: 7</p>
-                    <p>24kr pr stk</p>
+                    <p>7</p>
+                    <p>24 kr</p>
                 </div>
                 <div class="order-item guac-row guac-col-auto">
                     <p>Jordbær Cupcake</p>
-                    <p>Antal: 9</p>
-                    <p>30kr pr stk</p>
+                    <p>9</p>
+                    <p>30 kr</p>
                 </div>
             </div>
             <!-- Order List -->
+
+            <hr class="section-divider">
+
+            <!-- Info Under Order List -->
+            <div class="order-list">
+                <div class="order-item guac-row guac-col-auto">
+                    <p>Total</p>
+                    <p></p>
+                    <p>560 kr</p>
+                </div>
+            </div>
+            <!-- Info Under Order List -->
 
             <hr class="section-divider">
 
@@ -85,7 +111,14 @@
 
             <!-- Coupon -->
             <h3>Har du en rabatkode?</h3>
-            <input type="text" placeholder="" class="discount-code">
+            <input type="text" placeholder="5005-1050-51CU-PCAKE" class="discount-code">
+            <div class="coupon-options guac-row">
+                <button type="button">Benyt</button>
+            </div>
+            <div class="hidden-coupon">
+                <p>Rabatkode: 5005-1050-51CU-PCAKE anvendt</p>
+                <p>Rabat: 10%</p>
+            </div>
             <!-- Coupon -->
 
             <hr class="section-divider">
