--- a/Cupcake/src/main/resources/templates/login.html
+++ b/Cupcake/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Gruppe D"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Olsker Cupcakes</title>
+    <title>Olsker Cupcakes - Login</title>
 
     <!-- Icon -->
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
@@ -29,6 +29,8 @@
 
     <!-- Script Load -->
     <script src="/js/bubble-spawn.js" defer></script>
+    <script src="/js/notification.js" defer></script>
+
 
 </head>
 <body> 
@@ -56,6 +58,10 @@
             </form>
         </div>
     </section>
+
+    <!-- Notification -->
+    <div id="guac-notification-container"></div>
+    <!-- Notification -->
 
 </body>
 </html>
