--- a/Cupcake/src/main/resources/templates/register.html
+++ b/Cupcake/src/main/resources/templates/register.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Gruppe D"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Olsker Cupcakes</title>
+    <title>Olsker Cupcakes - Register</title>
 
     <!-- Icon -->
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
@@ -26,6 +26,7 @@
 
     <!-- Script Load -->
     <script src="/js/bubble-spawn.js" defer></script>
+    <script src="/js/notification.js" defer></script>
 
 </head>
 <body>
@@ -56,6 +57,10 @@
         </div>
     </section>
     <!-- Register Section End -->
+
+    <!-- Notification -->
+    <div id="guac-notification-container"></div>
+    <!-- Notification -->
 
 </body>
 </html>
