--- a/Cupcake/src/main/resources/templates/admin.html
+++ b/Cupcake/src/main/resources/templates/admin.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Gruppe D"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Olsker Cupcakes</title>
+    <title>Olsker Cupcakes - Admin</title>
 
     <!-- Icon -->
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
@@ -26,6 +26,8 @@
 
     <!-- Script Load -->
     <script src="/js/admin-menu.js" defer></script>
+    <script src="/js/auth.js" defer></script>
+    <script src="/js/notification.js" defer></script>
 
     <!-- Modules -->
     <script type="module" src="/js/components/navbar.js" defer></script>
@@ -53,7 +55,7 @@
                 </div>
 
                 <!-- Exit Button Start -->
-                <a href="../templates/index.html" class="exit-btn-profile" title="Tilbage til forsiden">&#10006;</a>
+                <a href="/" class="exit-btn-profile" title="Tilbage til forsiden">&#10006;</a>
                 <!-- Exit Button End -->
                  
             </div>
@@ -429,6 +431,10 @@
         </div>
     </section>
     <!-- Profile Menu End -->
+
+    <!-- Notification -->
+    <div id="guac-notification-container"></div>
+    <!-- Notification -->
 
 </body>
 </html>
