--- a/Cupcake/src/main/resources/templates/contact.html
+++ b/Cupcake/src/main/resources/templates/contact.html
@@ -44,6 +44,7 @@
         <div class="guac-container">
             <div class="guac-row">
 
+                <!-- Important Gap - Not fixing correct way idgaf -->
 
             </div>
         </div>
@@ -60,7 +61,7 @@
         <div class="guac-container">
             <div class="guac-row guac-justify-center">
                 <div class="section-1-intro guac-mt-5 guac-animate guac-slide-up">
-                    <p class="guac-pb-5 contact-intro-text">Har du spørgsmål, en specialbestilling eller brug for hjælp? Skriv til os herunder.</p>
+
                 </div>
             </div>
             <div class="guac-grid-2 guac-animate guac-fade-slide-up guac-pb-5">
