--- a/Cupcake/src/main/resources/templates/index.html
+++ b/Cupcake/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
     <script src="js/button-to-top.js"></script>
     <script src="js/notification.js"></script>
     <script src="js/showcase.js"></script>
+    <script src="js/preloader.js"></script>
 
     <!-- Modules -->
     <script type="module" src="js/components/navbar.js" defer></script>
@@ -44,6 +45,10 @@
 
 </head>
 <body>
+
+<!-- Preloader -->
+<div class="preloader"></div>
+<!-- Preloader -->
 
 <!-- Cookie Button Start -->
 <div class="cookie-btn"><i class="fa fa-arrow-up"></i></div>
@@ -163,7 +168,7 @@
         <!-- Man Section 2 Start -->
         <div class="man-wrapper">
             <div class="section-2-man guac-animate guac-fade-slide-up">
-                <img src="images/page-content/index/section-2-man.png">
+                <img src="images/page-content/index/section-2-man-wm-fix.png">
             </div>
         </div>
         <!-- Man Section 2 Start -->
