--- a/Cupcake/src/main/resources/templates/profile.html
+++ b/Cupcake/src/main/resources/templates/profile.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Gruppe D"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Olsker Cupcakes</title>
+    <title>Olsker Cupcakes - Profil</title>
 
     <!-- Icon -->
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
@@ -19,11 +19,15 @@
     <!-- CSS Load -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!-- Scripts can also be loaded here with defer -->
     <!-- Framwork load -->
     <link rel="stylesheet" href="/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="/css/guacamoleboy-framework.css">
     <script src="/js/guacamoleboy-wow.js" defer></script>
+
+    <!-- Script Load -->
+    <script src="/js/admin-menu.js" defer></script>
+    <script src="/js/auth.js" defer></script>
+    <script src="/js/notification.js" defer></script>
 
     <!-- Modules -->
     <script type="module" src="/js/components/navbar.js" defer></script>
@@ -31,41 +35,326 @@
 </head>
 <body class="profile-initial">
 
-    <!-- Profile Menu Start -->
-    <section class="profile-menu-visuals">
-        <div class="guac-row">
+<!-- Profile Menu Start -->
+<section class="profile-menu-visuals">
+    <div class="guac-row">
 
-            <!-- Side Menu Start -->
-            <div class="guac-col-2 profile-nav">
-                <div class="profile-title">
-                    <h3>Hej,<br>$name!</h3>
-                </div>
-                <div class="profile-buttons">
-                    <a href="#" class="guac-btn guac-btn-profile">Option</a>
-                    <a href="#" class="guac-btn guac-btn-profile">Option</a>
-                    <a href="#" class="guac-btn guac-btn-profile">Option</a>
-                    <a href="#" class="guac-btn guac-btn-profile">Option</a>
-                    <a href="#" class="guac-btn guac-btn-profile">Option</a>
-                    <a href="#" class="guac-btn guac-btn-profile">Option</a>
-                    <a href="#" class="guac-btn guac-btn-profile">Option</a>
-                </div>
-
-                <!-- Exit Button Start -->
-                <a href="../templates/index.html" class="exit-btn-profile" title="Tilbage til forsiden">&#10006;</a>
-                <!-- Exit Button End -->
-
+        <!-- Side Menu Start -->
+        <div class="guac-col-2 profile-nav">
+            <div class="profile-title">
+                <h3>Hej,<br>$name!</h3>
             </div>
-            <!-- Side Menu End -->
-
-            <!-- Main Content Start -->
-            <div class="guac-col-auto profile-actual">
-                <h2>Ku' fandme godt lægge en lort lige nu</h2>
+            <div class="profile-buttons">
+                <a href="#" class="guac-btn guac-btn-profile" data-section="minProfil">Min Profil</a>
+                <a href="#" class="guac-btn guac-btn-profile" data-section="mineOrdre">Mine Ordre</a>
+                <a href="#" class="guac-btn guac-btn-profile" data-section="returnering">Returnering</a>
             </div>
-            <!-- Main Content End -->
+
+            <!-- Exit Button Start -->
+            <a href="/" class="exit-btn-profile" title="Tilbage til forsiden">&#10006;</a>
+            <!-- Exit Button End -->
 
         </div>
-    </section>
-    <!-- Profile Menu End -->
+        <!-- Side Menu End -->
+
+        <!-- ____________________________________________________________________ -->
+
+        <!-- "minProfil" Content Start -->
+        <div class="guac-col-auto profile-actual" id="minProfil">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Hurtig Navigation</h2>
+                <p>Vælg herunder for hurtigere navigation</p>
+                <a class="guac-btn action-btn" href="#changeUsernameSection">Skift brugernavn</a>
+                <a class="guac-btn action-btn" href="#changePasswordSection">Skift adgangskode</a>
+                <a class="guac-btn action-btn" href="#changeEmailSection">Skift email</a>
+                <a class="guac-btn action-btn" href="#paymentInfoSection">Betalingsoplysninger</a>
+                <a class="guac-btn action-btn" href="#deleteAccountSection">Slet bruger</a>
+                <a class="guac-btn action-btn" href="#phoneSection">Telefon</a>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!--  Content Section -->
+            <div class="content-section" id="changeUsernameSection">
+                <h2>Skift brugernavn</h2>
+                <p>Indtast venligst dit gamle brugernavn, dit nye og dit password:</p>
+                <form method="post" action="/user/change-username">
+                    <div class="guac-row input-group">
+                        <div class="guac-col">
+                            <label>Dit gamle brugernavn</label>
+                            <input type="text" name="oldUsername" placeholder="Charlotte_99..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Nye brugernavn</label>
+                            <input type="text" name="newUsername" placeholder="Diddy69..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Nuværende password</label>
+                            <input type="password" name="password" placeholder="Indtast..." required>
+                        </div>
+                    </div>
+                    <button type="submit" class="guac-btn action-btn">Skift brugernavn</button>
+                </form>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!--  Content Section -->
+            <div class="content-section" id="changePasswordSection">
+                <h2>Skift adgangskode</h2>
+                <p>Udfyld oplysninger for at skifte adgangskode:</p>
+                <form method="post" action="/user/change-password">
+                    <div class="guac-row input-group">
+                        <div class="guac-col">
+                            <label>Brugernavn</label>
+                            <input type="text" name="username" placeholder="Brugernavn..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Gamle Password</label>
+                            <input type="password" name="oldPassword" placeholder="Gamle password..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Nye Password</label>
+                            <input type="password" name="newPassword" placeholder="Nye password..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Nye Password igen</label>
+                            <input type="password" name="newPasswordRepeat" placeholder="Nye password igen..." required>
+                        </div>
+                    </div>
+                    <button type="submit" class="guac-btn action-btn">Skift adgangskode</button>
+                </form>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!--  Content Section -->
+            <div class="content-section" id="changeEmailSection">
+                <h2>Skift email</h2>
+                <p>Udfyld oplysninger for at skifte din email:</p>
+                <form method="post" action="/user/change-email">
+                    <div class="guac-row input-group">
+                        <div class="guac-col">
+                            <label>Brugernavn</label>
+                            <input type="text" name="username" placeholder="Brugernavn..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Password</label>
+                            <input type="password" name="password" placeholder="Password..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Gamle email</label>
+                            <input type="email" name="oldEmail" placeholder="Nuværende email..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Nye email</label>
+                            <input type="email" name="newEmail" placeholder="Nye email..." required>
+                        </div>
+                    </div>
+                    <button type="submit" class="guac-btn action-btn">Skift email</button>
+                </form>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!-- Content Section -->
+            <div class="content-section" id="paymentInfoSection">
+                <h2>Betalingsoplysninger</h2>
+                <p>Se dine betalingsoplysninger herunder:</p>
+                <p class="guac-mt-5" th:utext="${user.paymentAttached} ? ${user.paymentInfo.cardNumber} : 'XXXX-XXXX-XXXX-XXXX'"></p>
+                <p th:text="${user.paymentAttached} ? ${user.paymentInfo.cvc} : 'XXX'"></p>
+                <p th:text="${user.paymentAttached} ? ${user.paymentInfo.expiry} : 'MM/YY'"></p>
+                <p class="guac-mb-4" th:text="${user.paymentAttached} ? ${user.paymentInfo.cardHolder} : 'Indehaver Navn'"></p>
+                <button type="button" class="guac-btn action-btn">Opdater</button>
+            </div>
+            <!-- Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider" id="deleteAccountSection">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Slet bruger</h2>
+                <p>Sletter du din bruger mister du alt din data:</p>
+                <form method="post" action="/user/delete-account">
+                    <div class="guac-row input-group">
+                        <div class="guac-col">
+                            <label>Brugernavn</label>
+                            <input type="text" name="username" placeholder="Brugernavn..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Password</label>
+                            <input type="password" name="password" placeholder="Password..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Email</label>
+                            <input type="email" name="email" placeholder="Email..." required>
+                        </div>
+                        <div class="guac-col">
+                            <label>Er du sikker?</label>
+                            <input type="text" name="confirm" placeholder="Ja/nej..." required>
+                        </div>
+                    </div>
+                    <button type="submit" class="guac-btn action-btn">Slet bruger</button>
+                </form>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider" id="phoneSection">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Telefon</h2>
+                <p>Herunder dine telefon oplysninger:</p>
+                <p class="guac-mt-5" th:utext="${user.phone != null} ? '+45 ' + user.phone : '+45 XX XX XX XX'"></p>
+                <form method="post" action="/user/change-phone">
+                    <button type="submit" class="guac-btn action-btn">Tilføj / Skift telefonnummer</button>
+                </form>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider"> <!-- Important to have in the end for sticky UI feel -->
+
+        </div>
+        <!-- "minProfil" Content End -->
+
+        <!-- "mineOrdre" Content Start -->
+        <div class="guac-col-auto profile-actual" id="mineOrdre" style="display:none;">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Hurtig Navigation</h2>
+                <p>Vælg herunder for hurtigere navigation</p>
+                <button type="button" class="guac-btn action-btn">Søg efter ordre</button>
+                <button type="button" class="guac-btn action-btn">Se alle ordre</button>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Søg efter ordre</h2>
+                <p>Indtast dine oplysninger herunder:</p>
+                <div class="guac-row input-group">
+                    <div class="guac-col">
+                        <label>Ordre ID</label>
+                        <input type="text" placeholder="41414...">
+                    </div>
+                </div>
+                <button type="button" class="guac-btn action-btn">Søg efter ordre</button>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Se alle ordre</h2>
+                <p>Her kan du se alle dine ordre</p>
+                <button type="button" class="guac-btn action-btn">Vis alle ordre</button>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+        </div>
+        <!-- "mineOrdre" Content End -->
+
+        <!-- "returnering" Content Start -->
+        <div class="guac-col-auto profile-actual" id="returnering" style="display:none;">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Hurtig Navigation</h2>
+                <p>Vælg herunder for hurtigere navigation</p>
+                <button type="button" class="guac-btn action-btn">Aktive returneringer</button>
+                <button type="button" class="guac-btn action-btn">Tidligere returneringer</button>
+                <button type="button" class="guac-btn action-btn">Opret ny returnering</button>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Aktive returneringer</h2>
+                <p>Herunder kan du se dine aktive returneringer:</p>
+                <button type="button" class="guac-btn action-btn">Opdater</button>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Tidligere returneringer</h2>
+                <p>Herunder kan du se dine tidligere returneringer:</p>
+                <button type="button" class="guac-btn action-btn">Opdater</button>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+            <!--  Content Section -->
+            <div class="content-section">
+                <h2>Opret ny returnering</h2>
+                <p>Udfyld oplysningerne herunder:</p>
+                <div class="guac-row input-group">
+                    <div class="guac-col">
+                        <label>Ordre ID</label>
+                        <input type="text" placeholder="51115...">
+                    </div>
+                </div>
+                <button type="button" class="guac-btn action-btn">Start returnering</button>
+            </div>
+            <!--  Content Section -->
+
+            <!-- ____________________________________________________________________ -->
+
+            <hr class="section-divider">
+
+        </div>
+        <!-- "returnering" Content End -->
+
+    </div>
+</section>
+<!-- Profile Menu End -->
+
+<!-- Notification -->
+<div id="guac-notification-container"></div>
+<!-- Notification -->
 
 </body>
 </html>
